Added styles for changing slot in airbus

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,11 @@
       </div>
     </div>
   </form>
-  <form action="" class="form"><h2>2</h2></form>
+  <form action="" class="form form-seats">
+    <h2 class="form-seats__title">Wybierz miejsca</h2>
+  <div class="form-seats__seats airbus">
+  </div>
+  </form>
   <form action="" class="form"><h2>3</h2></form>
   <form action="" class="form"><h2>4</h2></form>
   <form action="" class="form"><h2>5</h2></form>
