--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>SimFly - podróżuj najtaniej</title>
+  <script src="https://kit.fontawesome.com/f1c68147f3.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="header">
@@ -13,10 +14,25 @@
     <div class="main__forms">
   <form class="form form-init">
     <h1 class="form-init__title">SimFly</h1>
-    <input type="text" class="form-init__place" placeholder="Miejsce wylotu">
-    <input type="text" class="form-init__place" placeholder="Cel podróży">
+    <select class="form-init__place">
+      <option value="" disabled selected>Miejsce wylotu</option>
+      <option value="paris">Paryż</option>
+      <option value="tokyo">Tokio</option>
+      <option value="radom">Radom</option>
+    </select>
+    <select class="form-init__place">
+      <option value="" disabled selected>Cel podróży</option>
+      <option value="paris">Paryż</option>
+      <option value="tokyo">Tokio</option>
+      <option value="radom">Radom</option>
+    </select>
     <input type="date" class="form-init__date" placeholder="Wylatuję...">
-    <input type="date" class="form-init__date" placeholder="Przylatuję...">
+    <select class="form-init__place">
+      <option value="" disabled selected>Godzina wylotu</option>
+      <option value="paris">17:15</option>
+      <option value="tokyo">20:15</option>
+      <option value="radom">22:30</option>
+    </select>
     <div class="form-init__persons">
       <div class="form-init__counter counter">
         <button class="counter__button" data-for="adult" data-step="+">+</button>
@@ -46,9 +62,44 @@
   <div class="form-seats__seats airbus">
   </div>
   </form>
-  <form action="" class="form"><h2>3</h2></form>
+  <form action="" class="form services">
+    <h2 class="services__title">Wybierz swój pakiet</h2>
+    <section class="services__bundles" name="services__bundles" id="">
+      <div value="vip" class="services__bundle">
+        <h3 class="services__subtitle">Pakiet PRZELOT+</h3>
+        <div class="services__bundle-desc">
+        <p><span><i class="fas fa-suitcase"></i></span> Bagaż podręczny (40 x 30 x 20) pod fotelem</p>
+        <p><span><i class="fas fa-suitcase-rolling"></i></span> Bagaż dodatkowy (55 x 40 x 23 cm) w kabinie</p>
+        <p><span><i class="fas fa-user-shield"></i></span> Dodatkowa ochrona w cenie biletu</p>
+        <p><span><i class="fas fa-calendar-alt"></i></span> Odprawa do 30 dni przed wylotem</p>
+        <p><span><i class="fas fa-utensils"></i></span> Posiłek na pokładzie (w cenie)</p>
+        </div>
+        <button>Wybierz za <span class="services__value-btn">15 $</span></button>
+      </div>
+      <div value="standard" class="services__bundle">
+        <h3 class="services__subtitle">Pakiet BUSINESS</h3>
+        <div class="services__bundle-desc">
+        <p><span><i class="fas fa-suitcase"></i></span> Bagaż podręczny (40 x 30 x 20) pod fotelem</p>
+        <p><span><i class="fas fa-suitcase-rolling"></i></span> Bagaż dodatkowy (55 x 40 x 23 cm) w kabinie</p>
+        <p><span><i class="fas fa-calendar-alt"></i></span> Odprawa do 30 dni przed wylotem</p>
+      </div>
+        <button>Wybierz za <span class="services__value-btn">15 $</span></button>
+      </div>
+      <div value="standard" class="services__bundle">
+        <h3 class="services__subtitle">Pakiet BASIC</h3>
+        <div class="services__bundle-desc">
+        <p><span><i class="fas fa-suitcase"></i></span> Bagaż podręczny (40 x 30 x 20) pod fotelem</p>
+        <p><span><i class="fas fa-calendar-alt"></i></span> Odprawa do 2 dni przed wylotem</p>
+      </div>
+        <button>Wybierz za <span class="services__value-btn">15 $</span></button>
+      </div>
+    </section>
+  </form>
   <form action="" class="form"><h2>4</h2></form>
-  <form action="" class="form"><h2>5</h2></form>
+  <form action="" class="form">
+    <h2>Skutecznie dokonano rezerwacji!</h2>
+    <p>Życzymy przyjemnej podróży</p>
+  </form>
 </div>
 <div class="info">
   <button class="info__button button--next">Dalej</button>
@@ -62,5 +113,11 @@
 </div>
 </main>
 
+<!-- TODO:
+- information aside (order summary);
+- helpers (aside with  tips?) -->
+<!-- <aside class="information">
+  <h2>Podsumowanie</h2>
+</aside> -->
 </body>
 </html>
