Start working on modal with bank login

--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,25 @@
   </div>
 </div>
 </main>
-
+<div class="bank-modal">
+  <div class="bank">
+    <input type="text" class="bank__name" placeholder="Imię">
+    <input type="text" class="bank__surname" placeholder="Nazwisko">
+    <input type="mail" class="bank__email" placeholder="Adres e-mail">
+    <section class="bank__choose">
+      <button class="bank__item">mBank</button>
+      <button class="bank__item">ING</button>
+      <button class="bank__item">Alior bank</button>
+      <button class="bank__item">PKO Bank Polski</button>
+      <button class="bank__item">Sandanted Bank Polska</button>
+      <button class="bank__item">BNP Paribas Bank Polska</button>
+      <button class="bank__item">Getin Noble Bank</button>
+      <button class="bank__item">Nest Bank</button>
+      <button class="bank__item">Citi Handlowy</button>
+      <button class="bank__other">Inny (przelew tradycyjny)</button>
+    </section>
+  </div>
+</div>
 <!-- TODO:
 - information aside (order summary);
 - helpers (aside with  tips?) -->
