--- a/src/index.html
+++ b/src/index.html
@@ -143,21 +143,28 @@
 </main>
 <div class="bank-modal">
   <div class="bank">
+    <h2 class="bank__title">Wybierz bank</h2>
+    <p class="bank__price">Kwota do zapłaty: <span class="bank__value">300 $</span></p>
+  <form action="" class="bank__data">
     <input type="text" class="bank__name" placeholder="Imię">
     <input type="text" class="bank__surname" placeholder="Nazwisko">
     <input type="mail" class="bank__email" placeholder="Adres e-mail">
-    <section class="bank__choose">
-      <button class="bank__item">mBank</button>
-      <button class="bank__item">ING</button>
-      <button class="bank__item">Alior bank</button>
-      <button class="bank__item">PKO Bank Polski</button>
-      <button class="bank__item">Sandanted Bank Polska</button>
-      <button class="bank__item">BNP Paribas Bank Polska</button>
-      <button class="bank__item">Getin Noble Bank</button>
-      <button class="bank__item">Nest Bank</button>
-      <button class="bank__item">Citi Handlowy</button>
-      <button class="bank__other">Inny (przelew tradycyjny)</button>
-    </section>
+  </form>
+  <section class="bank__choose">
+    <button class="bank__item">mBank</button>
+    <button class="bank__item">ING</button>
+    <button class="bank__item">Alior bank</button>
+    <button class="bank__item">PKO Bank Polski</button>
+    <button class="bank__item">Sandanted Bank Polska</button>
+    <button class="bank__item">BNP Paribas Bank Polska</button>
+    <button class="bank__item">Getin Noble Bank</button>
+    <button class="bank__item">Nest Bank</button>
+    <button class="bank__item">Citi Handlowy</button>
+    <button class="bank__item">Credit Agricole</button>
+    <button class="bank__item">Plus Bank</button>
+    <button class="bank__item">Idea Bank</button>
+    <button class="bank__other">Inny (przelew tradycyjny)</button>
+  </section>
   </div>
 </div>
 <!-- TODO:
