Added localStorage handlers

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       <option value="tokyo">Tokyo</option>
       <option value="radom">Radom</option>
     </select>
-    <input type="date" class="form-init__date" placeholder="Wylatuję...">
+    <input type="date" class="form-init__date" placeholder="Wylatuję..." id="date">
     <select class="form-init__time" id='time'>
       <option value="" disabled selected>Godzina wylotu</option>
     </select>
