--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <p class="header__info">Z powodu epidemii COVID-19, mogą nastąpić opóźnienia w niektórych lotach.</p>
-    <p class="header__login">Jesteś zalogowana/-y jako: <span id="login-info">niezalogowany</span></p>
+    <p class="header__login">Jesteś zalogowana/-y jako: <span id="login-info">niezalogowany</span><span class="login__sign-in">Zaloguj</span></p>
   </header>
   <main class="main">
     <div class="main__forms">
@@ -121,17 +121,13 @@
       <span class="summary__operation">
         <span class="summary__target-vip-seats--amount">2</span> x <span class="summary__target-vip-seats--price">20 $</span></span>
         <span class="summary__sum">=<span class="summary__target-vip-seats--summary">40 $</span></span></p>
-    <!-- <p class="summary__row">
-      <span class="summary__target">Dopłaty za pakiet: </span>
-      <span class="summary__operation">
-        <span class="summary__target-package--amount">1</span> x <span class="summary__target-package--price">20 $</span></span>
-        <span class="summary__sum">=<span class="summary__target-package--summary">40 $</span></span></p> -->
     <h4 class="summary__row">RAZEM: <span class="summary__sum--all">190 $</span></h4>
     <p class="summary__row">Środki na koncie: <span>0 $</span></p>
   </div>
   <div class="summary__user-handler">
     <button class="summary__log-in">Zaloguj się, by kupić</button>
     <button class="summary__pay">Kup bez logowania</button>
+    <button class="summary__order">Zamów</button>
   </div>
   </form>
   <form action="" class="form">
@@ -173,17 +169,19 @@
     <button class="bank__item">Plus Bank</button>
     <button class="bank__item">Idea Bank</button>
     <button class="bank__other">Inny (przelew tradycyjny)</button>
+    <div class="bank__close"><i class="fas fa-times"></i></div>
   </section>
   </div>
 </div>
 <div class="modal login ">
-  <form action="" class="login__form form">
-  <input type="text" class="login__mail" placeholder="Login">
-  <input type="password" class="login__password" placeholder="Hasło">
-  <button class="summary__log-in">Zaloguj się, by kupić</button>
+  <form class="login__form form">
+  <input type="email" data-input="email" class="login__mail" placeholder="Login">
+  <input type="password" data-input="password" class="login__password" placeholder="Hasło">
+  <button class="login__log-in">Zaloguj się, by kupić</button>
+  <button class="login__close">Zamknij</button>
 </form>
 </div>
-<div class="modal  spinner">
+<div class="modal  loader">
   <div class="lds-hourglass"></div>
 </div>
 <!-- TODO:
