Added seats validation

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
         <span class="summary__target-vip-seats--amount">2</span> x <span class="summary__target-vip-seats--price">20 $</span></span>
         <span class="summary__sum">=<span class="summary__target-vip-seats--summary">40 $</span></span></p>
     <h4 class="summary__row">RAZEM: <span class="summary__sum--all">190 $</span></h4>
-    <p class="summary__row">Środki na koncie: <span>0 $</span></p>
+    <p class="summary__row">Środki na koncie: <span class="summary__account">0 $</span></p>
   </div>
   <div class="summary__user-handler">
     <button class="summary__log-in">Zaloguj się, by kupić</button>
@@ -153,7 +153,7 @@
   <form action="" class="bank__data">
     <input type="text" class="bank__name" placeholder="Imię">
     <input type="text" class="bank__surname" placeholder="Nazwisko">
-    <input type="mail" class="bank__email" placeholder="Adres e-mail">
+    <input type="mail" class="bank__email" data-input="email" placeholder="Adres e-mail">
   </form>
   <section class="bank__choose">
     <button class="bank__item">mBank</button>
