Added .env and fixed styling

--- a/src/index.html
+++ b/src/index.html
@@ -151,9 +151,9 @@
     <h2 class="bank__title">Wybierz bank</h2>
     <p class="bank__price">Kwota do zapłaty: <span class="bank__value">300 $</span></p>
   <form action="" class="bank__data">
-    <input type="text" class="bank__name" placeholder="Imię">
-    <input type="text" class="bank__surname" placeholder="Nazwisko">
-    <input type="mail" class="bank__email" data-input="email" placeholder="Adres e-mail">
+    <input type="text" data-input="name" class="bank__name" placeholder="Imię">
+    <input type="text" data-input="surname" class="bank__surname" placeholder="Nazwisko">
+    <input type="mail" data-input="email" class="bank__email" data-input="email" placeholder="Adres e-mail">
   </form>
   <section class="bank__choose">
     <button class="bank__item">mBank</button>
