--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </header>
   <main class="main">
     <div class="main__forms">
-  <form class="form form-init">
+  <form id="0" class="form form-init">
     <h1 class="form-init__title">SimFly</h1>
     <select class="form-init__place" id='departure'>
       <option value="" disabled selected>Miejsce wylotu</option>
@@ -56,12 +56,12 @@
       </div>
     </div>
   </form>
-  <form action="" class="form form-seats">
+  <form id="1" action="" class="form form-seats">
     <h2 class="form-seats__title">Wybierz miejsca</h2>
   <div class="form-seats__seats airbus">
   </div>
   </form>
-  <form action="" class="form services">
+  <form id="2" action="" class="form services">
     <h2 class="services__title">Wybierz swój pakiet</h2>
     <section class="services__bundles" name="services__bundles" id="">
       <div value="vip" class="services__bundle">
@@ -97,7 +97,7 @@
       </div>
     </section>
   </form>
-  <form action="" class="form summary">
+  <form id="3" action="" class="form summary">
     <h2 class="summary__title">Podsumowanie</h2>
     <div class="summary__info">
     <h3 class="summary__subtitle">Łącznie do zapłaty:</h3>
@@ -130,7 +130,7 @@
     <button class="summary__order">Zamów</button>
   </div>
   </form>
-  <form action="" class="form">
+  <form id="4" action="" class="form">
     <h2>Skutecznie dokonano rezerwacji!</h2>
     <p>Życzymy przyjemnej podróży</p>
   </form>
