Added MVP version of app

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
   <title>SimFly - podróżuj najtaniej</title>
   <script src="https://kit.fontawesome.com/f1c68147f3.js" crossorigin="anonymous"></script>
-</head>
+<link href="main.0771e41f4fb0c6442134.css" rel="stylesheet"></head>
 <body>
   <header class="header">
     <p class="header__login">Jesteś zalogowana/-y jako: <span id="login-info">niezalogowany</span></p>
@@ -195,5 +195,5 @@
     <div class="slider__step"></div>
   </div>
 </div>
-</body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
